No strings have changed, only context strings to match I18N_NOOP calls in MyMoneySchedule.

Temporary fix. This will be dealt with properly after release.

BUG:246702

CCMAIL:kde-i18n-doc@kde.org
CCMAIL:kmymoney-devel@kde.org

svn path=/trunk/extragear/office/kmymoney/; revision=1159713